fixed picture width/replaced contact
fixed picture width so it wont look so stretched and replaced contact information with technologies

--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -134,7 +134,7 @@ z-index: -1;
 @media(max-width:1080px){
     .about-me-container .row .col-md-6 #about-me-img img{
         height: 400px;
-        width: 290px;
+        width: 250px;
     }
 }
 @media(max-width:960px){
@@ -143,7 +143,7 @@ z-index: -1;
     }
     .about-me-container .row .col-md-6 #about-me-img img{
         height: 400px;
-        width: 300px;
+        width: 260px;
         padding-right: 10px;
     }
     .container-fluid .row .col-md-6 .about-me-content{
@@ -157,7 +157,7 @@ z-index: -1;
     }
     .about-me-container .row .col-md-6 #about-me-img img{
         height: 525px;
-        width: 375px;
+        width: 335px;
         margin-top: 0px;
         padding-bottom: 50px;
         padding-right: 0px;
@@ -169,11 +169,20 @@ z-index: -1;
     .about-me-container .row .col-md-6 .about-me-content .resume-button{
         text-align: center;
     }
+    .about-me-skills p{
+        text-align: center;
+    }
+    .about-me-skills ul{
+        justify-content: space-around;
+    }
+    .about-me-skills ul div li{
+        font-size: 20px;
+    }
 }
 @media(max-width:450px){
     .about-me-container .row .col-md-6 #about-me-img img{
         height: 415px;
-        width: 300px;
+        width: 250px;
     }
 }
 @media(max-width:400px){
@@ -201,7 +210,7 @@ z-index: -1;
 }
 #about-me-img img{
     height: 450px;
-    width: 350px;
+    width: 320px;
 }
 .about-me-page-counter-container{
     height: 100px;
@@ -248,8 +257,19 @@ z-index: -1;
     border: solid rgb(0, 232, 182);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.about-me-skills > ul{
+.about-me-skills p{
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 15px;
+    margin-bottom: 0px;
+}
+
+.about-me-skills ul{
+    display: flex;
     padding-top: 15px;
+}
+.about-me-skills ul div{
+    margin-right: 50px;
 }
 .resume-button{
     margin-top: 25px;
